Fix code quality issues in ChessClient