@@ -1,4 +1,4 @@
-package dev.cgj.chess;
+package dev.cgj.chess.client;
 
 import java.io.BufferedReader;
 import java.io.IOException;
@@ -12,8 +12,6 @@ import java.util.Timer;
 import java.util.TimerTask;
 
 public class ChessClient {
-    private String serverAddress = "0.0.0.0";
-    private int serverPort = 1500;
     private boolean connected = false;
     Socket clientSocket = null;
     BufferedReader input = null;
@@ -25,12 +23,7 @@ public class ChessClient {
     public ChessClient (String serverAddress, int serverPort) {
         connect(serverAddress, serverPort);
         play();
-    } // ChessClient constructor
-
-    public ChessClient () {
-        connect("localhost", 1500);
-        play();
-    } // default ChessClient constructor
+    }
 
     /**
      * Sends scanner input to the server until the current connection is terminated, if one exists.
@@ -38,20 +31,18 @@ public class ChessClient {
     private void play() {
         if (!connected) {
             System.out.println("No connection to play on.");
-            return;
         } else {
             while (connected) {
                 output.println(scanner.nextLine());
             }
             System.out.println("No connection to play on.");
         }
-    } // play
+    }
 
     public void connect(String serverAddress, int serverPort) {
         try {
             clientSocket = new Socket(serverAddress, serverPort);
         } catch (IOException e) {
-            //e.printStackTrace();
             System.out.println("[!] Connection to Server failed.");
             return;
         }
@@ -60,14 +51,11 @@ public class ChessClient {
             input = new BufferedReader(new InputStreamReader(clientSocket.getInputStream()));
             output = new PrintWriter(clientSocket.getOutputStream(), true);
         } catch (IOException e) {
-            //e.printStackTrace();
             System.out.println("[!] Server communication error.");
             return;
         }
 
         System.out.println(String.format("Connected to server at %s:%s", serverAddress, serverPort));
-        this.serverPort = serverPort;
-        this.serverAddress = serverAddress;
         connected = true;
 
         listen = new Thread() {
@@ -81,7 +69,6 @@ public class ChessClient {
                             messageQueue.add(line);
                         }
                     } catch (IOException e) {
-                        //e.printStackTrace();
                         System.out.println("[!] Failed to read from server.");
                         disconnect();
                     }
@@ -90,17 +77,17 @@ public class ChessClient {
                     if (!messageQueue.isEmpty()) {
 
                         // messages starting with '!' regard connection status
-                        if (messageQueue.get(0).length() >= 1 && messageQueue.get(0).charAt(0) == '!') {
-                            System.out.println("Connection Closed By Server. Reason: " + messageQueue.get(0).substring(1));
+                        if (!messageQueue.getFirst().isEmpty() && messageQueue.getFirst().charAt(0) == '!') {
+                            System.out.println("Connection Closed By Server. Reason: " + messageQueue.getFirst().substring(1));
                             disconnect();
 
                             // other messages are meant to be displayed to the client eg. board appearance
                         } else {
-                            System.out.println("[S] " + messageQueue.get(0));
+                            System.out.println("[S] " + messageQueue.getFirst());
                         }
 
                         // remove handled message
-                        messageQueue.remove(0);
+                        messageQueue.removeFirst();
                     }
                 }
             }
@@ -132,7 +119,6 @@ public class ChessClient {
             input.close();
             clientSocket.close();
         } catch (IOException e) {
-            //e.printStackTrace();
             System.out.println("[!] Could not disconnect from server");
             return;
         }
